--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 	<display-name>Souvenirs</display-name>
@@ -38,6 +38,30 @@
 			<taglib-location>/WEB-INF/x-rt.tld</taglib-location>
 		</taglib>
 	</jsp-config>
+
+	<servlet>
+		<display-name>UserServlet</display-name>
+		<servlet-name>UserServ</servlet-name>
+		<servlet-class>user.web.UserServ</servlet-class>
+	</servlet>
+	<servlet>
+		<display-name>SouvenirsServlet</display-name>
+		<servlet-name>SouvenirsServ</servlet-name>
+		<servlet-class>souvenirs.web.SouvenirsServ</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserServ</servlet-name>
+		<url-pattern>/register</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SouvenirsServ</servlet-name>
+		<url-pattern>/homepage</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserServ</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
@@ -46,4 +70,8 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<session-config>
+		<session-timeout>5</session-timeout>
+	</session-config>
 </web-app>
