--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -38,7 +38,6 @@
 			<taglib-location>/WEB-INF/x-rt.tld</taglib-location>
 		</taglib>
 	</jsp-config>
-
 	<servlet>
 		<display-name>UserServlet</display-name>
 		<servlet-name>UserServ</servlet-name>
@@ -49,19 +48,27 @@
 		<servlet-name>SouvenirsServ</servlet-name>
 		<servlet-class>souvenirs.web.SouvenirsServ</servlet-class>
 	</servlet>
+	<servlet>
+		<display-name>ImageLoader</display-name>
+		<servlet-name>ImageLoader</servlet-name>
+		<servlet-class>tool.ImageLoader</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>UserServ</servlet-name>
 		<url-pattern>/register</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UserServ</servlet-name>
+		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>SouvenirsServ</servlet-name>
 		<url-pattern>/homepage</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-		<servlet-name>UserServ</servlet-name>
-		<url-pattern>/login</url-pattern>
+		<servlet-name>ImageLoader</servlet-name>
+		<url-pattern>/image</url-pattern>
 	</servlet-mapping>
-	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
@@ -70,7 +77,6 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
-	
 	<session-config>
 		<session-timeout>5</session-timeout>
 	</session-config>
