试验canvas的图片下载的4种方式

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -84,6 +84,11 @@
 		<servlet-name>ImageLoader</servlet-name>
 		<url-pattern>/image</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SouvenirsServ</servlet-name>
+		<url-pattern>/changeImage</url-pattern>
+	</servlet-mapping>	
+	
 	<error-page>
 		<error-code>403</error-code>
 		<location>/ErrorHandler</location>
