设计动态获取相册中图片的json格式；引入json-java；设计js以完成json的显示；使用ajax完成对相册的动态获取；添加响应的servlet完成album的查询

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -88,7 +88,15 @@
 		<servlet-name>SouvenirsServ</servlet-name>
 		<url-pattern>/changeImage</url-pattern>
 	</servlet-mapping>	
-	
+	<servlet-mapping>
+		<servlet-name>SouvenirsServ</servlet-name>
+		<url-pattern>/making</url-pattern>
+	</servlet-mapping>	
+	<servlet-mapping>
+		<servlet-name>SouvenirsServ</servlet-name>
+		<url-pattern>/AlbumAjax</url-pattern>
+	</servlet-mapping>	
+			
 	<error-page>
 		<error-code>403</error-code>
 		<location>/ErrorHandler</location>
