设计了Souvenirs模板的JSON数据结构

--- a/conf/souvenirs.properties
+++ b/conf/souvenirs.properties
@@ -1,5 +1,5 @@
 verifycode_number = 1
 verifycode1 = C1W2
 
-data_path1 = E:\\computer science\\Souvenirs\\db\\data
-data_path = D:\\project\\Souvenirs\\db\\data
+data_path = E:\\computer science\\Souvenirs\\db\\data
+data_path1 = D:\\project\\Souvenirs\\db\\data
