实现使用json串的canvas绘制；实现preview上的交互框；修复login直接打开会抛出异常的bug

--- a/conf/templete.properties
+++ b/conf/templete.properties
@@ -1,37 +1,2 @@
-templete_1=[
-    {
-        "background": "BBB.jpg",
-        "originW": 1960,
-        "originH": 2240
-    },
-    {
-        "type": "image",
-        "url": "placeholder.png",
-        "startX": 218,
-        "startY": 252,
-        "drawW": 1092,
-        "drawH": 658,
-        "zoom": 0,
-        "moveX": 0,
-        "moveY": 0,
-        "t11": 1,
-        "t12": 0,
-        "t13": 0,
-        "t21": 0,
-        "t22": 1,
-        "t23": 0
-    },
-    {
-        "type": "text",
-        "text": "test content",
-        "startX": 1270,
-        "startY": 370,
-        "maxW": 574,
-        "style": "arial",
-        "size": 16,
-        "color": "black",
-        "bold": false,
-        "italic": false,
-        "underlined": false
-    }
-]
+templete1 = [{"background": "BBB.jpg","originW": 1960,"originH": 2240},{"type": "image","url": "/Souvenirs/res/image/default_avatar.png","startX": 107,"startY": 252,"drawW": 1092,"drawH": 658,"zoom": 0,"moveX": 0,"moveY": 0,"t11": 1,"t12": 0,"t13": 0,"t21": 0,"t22": 1,"t23": 0, "clipShape":"rect"},{"type": "text","text": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\u4F60\u6211\u4ED6\u5979\u5B83\u3042\u3044\u3046\u3048\u304A1234567890`-=[];\'", "startX": 1204,"startY": 337,"maxW": 531,"maxH":263, "style": "arial","size": 16,"color": "black","bold": false,"italic": false,"paddingL": 96, "paddingR":87, "paddingT":51, "paddingB":44, "lineH":1.5, "clipShape":"rect"}]
+templete2 = [{"background": "BBB.jpg","originW": 1960,"originH": 2240},{"type": "image","url": "/Souvenirs/res/image/default_avatar.png","startX": 107,"startY": 252,"drawW": 1092,"drawH": 658,"zoom": 0,"moveX": 0,"moveY": 0,"t11": 1,"t12": 0,"t13": 0,"t21": 0,"t22": 1,"t23": 0, "clipShape":"circle", "clipPara": [653,581,329]},"type": "text","text": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\u4F60\u6211\u4ED6\u5979\u5B83\u3042\u3044\u3046\u3048\u304A1234567890`-=[];\'", "startX": 1204,"startY": 337,"maxW": 531,"maxH":263, "style": "arial","size": 16,"color": "black","bold": false,"italic": false,"paddingL": 96, "paddingR":87, "paddingT":51, "paddingB":44, "lineH":1.5, "clipShape":"rect"}]
