--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -25,6 +25,15 @@ log4j.appender.info.DatePattern='.'yyyy-MM-dd
 log4j.appender.info.layout = org.apache.log4j.PatternLayout
 log4j.appender.info.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m [ at- %l: %rms ]%n
 
+###INFO
+log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.info.File = ${user.home}/Documents/Souvenirs/logs/runninglog.csv
+log4j.appender.info.Append = true
+log4j.appender.info.Threshold = INFO 
+log4j.appender.info.DatePattern='.'yyyy-MM-dd
+log4j.appender.info.layout = org.apache.log4j.PatternLayout
+log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%m","%l","%rms"%n
+
 ###WARNING
 log4j.appender.W = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.W.File = ${user.home}/Documents/Souvenirs/logs/warning.log
@@ -34,6 +43,15 @@ log4j.appender.W.DatePattern='.'yyyy-MM-dd
 log4j.appender.W.layout = org.apache.log4j.PatternLayout
 log4j.appender.W.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m [ -at %l: %rms ]%n
 
+###WARNING
+log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.info.File = ${user.home}/Documents/Souvenirs/logs/warning.csv
+log4j.appender.info.Append = true
+log4j.appender.info.Threshold = WARN 
+log4j.appender.info.DatePattern='.'yyyy-MM-dd
+log4j.appender.info.layout = org.apache.log4j.PatternLayout
+log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%m","%l","%rms"%n
+
 ### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.E.File =${user.home}/Documents/Souvenirs/logs/error.log
@@ -42,6 +60,15 @@ log4j.appender.E.Threshold = ERROR
 log4j.appender.E.DatePattern='.' yyyy-MM-dd
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m [ -at %l: %rms ]%n
+
+###ERROR
+log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.info.File = ${user.home}/Documents/Souvenirs/logs/error.csv
+log4j.appender.info.Append = true
+log4j.appender.info.Threshold = ERROR 
+log4j.appender.info.DatePattern='.'yyyy-MM-dd
+log4j.appender.info.layout = org.apache.log4j.PatternLayout
+log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%m","%l","%rms"%n
 
 ###FATAL
 log4j.appender.fatal = org.apache.log4j.DailyRollingFileAppender
