解决了包含中文的文件名在下载的时候会乱码的bug；添加了下载souvenir的代码；将tomcat的上传大小限制调整为10MB；修复了canvas中绘制文字在换行处会丢掉字符的bug；修复了下载生成的原图中文字行高值过小的问题

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -90,7 +90,7 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>SouvenirsServ</servlet-name>
-		<url-pattern>/changeImage</url-pattern>
+		<url-pattern>/formPicture</url-pattern>
 	</servlet-mapping>	
 	<servlet-mapping>
 		<servlet-name>SouvenirsServ</servlet-name>
