--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,S
 
 ### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = ${user.home}/Documents/Souvenirs/logs/debug.log
+log4j.appender.D.File = ${user.home}/Souvenirs/logs/debug.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG 
 log4j.appender.D.DatePattern='.'yyyy-MM-dd
@@ -18,7 +18,7 @@ log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m
 
 ###INFO
 log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = ${user.home}/Documents/Souvenirs/logs/runninglog.log
+log4j.appender.info.File = ${user.home}/Souvenirs/logs/runninglog.log
 log4j.appender.info.Append = true
 log4j.appender.info.Threshold = INFO 
 log4j.appender.info.DatePattern='.'yyyy-MM-dd
@@ -27,7 +27,7 @@ log4j.appender.info.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ]
 
 ###INFO
 log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = ${user.home}/Documents/Souvenirs/logs/runninglog.csv
+log4j.appender.info.File = ${user.home}/Souvenirs/logs/runninglog.csv
 log4j.appender.info.Append = true
 log4j.appender.info.Threshold = INFO 
 log4j.appender.info.DatePattern='.'yyyy-MM-dd
@@ -36,7 +36,7 @@ log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p 
 
 ###WARNING
 log4j.appender.W = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.W.File = ${user.home}/Documents/Souvenirs/logs/warning.log
+log4j.appender.W.File = ${user.home}/Souvenirs/logs/warning.log
 log4j.appender.W.Append = true
 log4j.appender.W.Threshold = WARN
 log4j.appender.W.DatePattern='.'yyyy-MM-dd
@@ -45,7 +45,7 @@ log4j.appender.W.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m
 
 ###WARNING
 log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = ${user.home}/Documents/Souvenirs/logs/warning.csv
+log4j.appender.info.File = ${user.home}/Souvenirs/logs/warning.csv
 log4j.appender.info.Append = true
 log4j.appender.info.Threshold = WARN 
 log4j.appender.info.DatePattern='.'yyyy-MM-dd
@@ -54,7 +54,7 @@ log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p 
 
 ### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File =${user.home}/Documents/Souvenirs/logs/error.log
+log4j.appender.E.File =${user.home}/Souvenirs/logs/error.log
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = ERROR 
 log4j.appender.E.DatePattern='.' yyyy-MM-dd
@@ -63,7 +63,7 @@ log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m
 
 ###ERROR
 log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = ${user.home}/Documents/Souvenirs/logs/error.csv
+log4j.appender.info.File = ${user.home}/Souvenirs/logs/error.csv
 log4j.appender.info.Append = true
 log4j.appender.info.Threshold = ERROR 
 log4j.appender.info.DatePattern='.'yyyy-MM-dd
@@ -72,7 +72,7 @@ log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p 
 
 ###FATAL
 log4j.appender.fatal = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.fatal.File = ${user.home}/Documents/Souvenirs/logs/fatal.log
+log4j.appender.fatal.File = ${user.home}/Souvenirs/logs/fatal.log
 log4j.appender.fatal.Append = true
 log4j.appender.fatal.Threshold = FATAL 
 log4j.appender.fatal.DatePattern='.'yyyy-MM-dd
