--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,5 +1,5 @@
  ### \u8BBE\u7F6E###
-log4j.rootLogger = debug,stdout,D,info,W,E,fatal
+log4j.rootLogger = debug,stdout,D,I,W,warn,E,error,fatal
 
 ### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
@@ -14,25 +14,25 @@ log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG 
 log4j.appender.D.DatePattern='.'yyyy-MM-dd
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m  [ at- %l: %rms ]%n
+#log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m  [ at- %l: %rms ]%n
+log4j.appender.D.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%c","%M","%L","%m","%rms"%n
 
 ###INFO
-log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = ${user.home}/Souvenirs/logs/runninglog.log
-log4j.appender.info.Append = true
-log4j.appender.info.Threshold = INFO 
-log4j.appender.info.DatePattern='.'yyyy-MM-dd
-log4j.appender.info.layout = org.apache.log4j.PatternLayout
-log4j.appender.info.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m [ at- %l: %rms ]%n
+log4j.appender.I = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.I.File = ${user.home}/Souvenirs/logs/runninglog.csv
+log4j.appender.I.Append = true
+log4j.appender.I.Threshold = INFO
+log4j.appender.I.DatePattern='.'yyyy-MM-dd
+log4j.appender.I.layout = org.apache.log4j.PatternLayout
+log4j.appender.I.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%C","%M","%L","%m","%rms"%n
 
-###INFO
-log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = ${user.home}/Souvenirs/logs/runninglog.csv
-log4j.appender.info.Append = true
-log4j.appender.info.Threshold = INFO 
-log4j.appender.info.DatePattern='.'yyyy-MM-dd
-log4j.appender.info.layout = org.apache.log4j.PatternLayout
-log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%m","%l","%rms"%n
+#log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.info.File = ${user.home}/Souvenirs/logs/runninglog.log
+#log4j.appender.info.Append = true
+#log4j.appender.info.Threshold = INFO 
+#log4j.appender.info.DatePattern='.'yyyy-MM-dd
+#log4j.appender.info.layout = org.apache.log4j.PatternLayout
+#log4j.appender.info.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m [ at- %l: %rms ]%n
 
 ###WARNING
 log4j.appender.W = org.apache.log4j.DailyRollingFileAppender
@@ -44,13 +44,13 @@ log4j.appender.W.layout = org.apache.log4j.PatternLayout
 log4j.appender.W.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m [ -at %l: %rms ]%n
 
 ###WARNING
-log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = ${user.home}/Souvenirs/logs/warning.csv
-log4j.appender.info.Append = true
-log4j.appender.info.Threshold = WARN 
-log4j.appender.info.DatePattern='.'yyyy-MM-dd
-log4j.appender.info.layout = org.apache.log4j.PatternLayout
-log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%m","%l","%rms"%n
+log4j.appender.warn = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.warn.File = ${user.home}/Souvenirs/logs/warning.csv
+log4j.appender.warn.Append = true
+log4j.appender.warn.Threshold = WARN 
+log4j.appender.warn.DatePattern='.'yyyy-MM-dd
+log4j.appender.warn.layout = org.apache.log4j.PatternLayout
+log4j.appender.warn.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%C","%M","%L","%m","%rms"%n
 
 ### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
@@ -62,13 +62,13 @@ log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %m [ -at %l: %rms ]%n
 
 ###ERROR
-log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = ${user.home}/Souvenirs/logs/error.csv
-log4j.appender.info.Append = true
-log4j.appender.info.Threshold = ERROR 
-log4j.appender.info.DatePattern='.'yyyy-MM-dd
-log4j.appender.info.layout = org.apache.log4j.PatternLayout
-log4j.appender.info.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%m","%l","%rms"%n
+log4j.appender.error = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.error.File = ${user.home}/Souvenirs/logs/error.csv
+log4j.appender.error.Append = true
+log4j.appender.error.Threshold = ERROR 
+log4j.appender.error.DatePattern='.'yyyy-MM-dd
+log4j.appender.error.layout = org.apache.log4j.PatternLayout
+log4j.appender.error.layout.ConversionPattern = "%-d{yyyy-MM-dd HH:mm:ss}","[ %p ]","%C","%M","%L","%m","%rms"%n
 
 ###FATAL
 log4j.appender.fatal = org.apache.log4j.DailyRollingFileAppender
