添加部分注释；修改servlet连接以及单例模式以达到线程安全；修改canvas绘图时的onload响应函数，以保证绘图函数异步调用时参数的保持

--- a/conf/souvenirs.properties
+++ b/conf/souvenirs.properties
@@ -2,8 +2,8 @@
 verifycode_number = 1
 verifycode1 = C1W2
 #data_path indicates the folder storing data at server
-data_path = E:\\computer science\\Souvenirs\\db\\data
-data_path1 = D:\\project\\Souvenirs\\db\\data
+data_path1 = E:\\computer science\\Souvenirs\\db\\data
+data_path = D:\\project\\Souvenirs\\db\\data
 #upload parameters, in hexadecimal
 MEMORY_THRESHOLD = 200000
 MAX_FILE_SIZE = 4000000
