完善javadoc形式的注释

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -81,7 +81,7 @@
 		<url-pattern>/homepage</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-		<servlet-name>SouvenirsServ</servlet-name>
+		<servlet-name>UserServ</servlet-name>
 		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
