添加部分注释；优化canvas在下载时等待界面的样子

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -104,7 +104,11 @@
 		<servlet-name>UploadServ</servlet-name>
 		<url-pattern>/upload</url-pattern>
 	</servlet-mapping>	
-				
+	<servlet-mapping>
+		<servlet-name>SouvenirsServ</servlet-name>
+		<url-pattern>/checkMakingDone</url-pattern>
+	</servlet-mapping>	
+					
 	<error-page>
 		<error-code>403</error-code>
 		<location>/ErrorHandler</location>
