制作my album管理页面；完成显示页面的后端操作；完成从homepage到album的跳转；添加picture类和实现store接口的PictureImplStore类；查询picture信息时使用store接口

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -108,6 +108,10 @@
 		<servlet-name>SouvenirsServ</servlet-name>
 		<url-pattern>/checkMakingDone</url-pattern>
 	</servlet-mapping>	
+	<servlet-mapping>
+		<servlet-name>SouvenirsServ</servlet-name>
+		<url-pattern>/album</url-pattern>
+	</servlet-mapping>	
 					
 	<error-page>
 		<error-code>403</error-code>
