--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,143 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	id="WebApp_ID" version="3.1">
-	<display-name>Souvenirs</display-name>
-	<jsp-config>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/fmt</taglib-uri>
-			<taglib-location>/WEB-INF/fmt.tld</taglib-location>
-		</taglib>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/fmt-rt</taglib-uri>
-			<taglib-location>/WEB-INF/fmt-rt.tld</taglib-location>
-		</taglib>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
-			<taglib-location>/WEB-INF/c.tld</taglib-location>
-		</taglib>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/core-rt</taglib-uri>
-			<taglib-location>/WEB-INF/c-rt.tld</taglib-location>
-		</taglib>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/sql</taglib-uri>
-			<taglib-location>/WEB-INF/sql.tld</taglib-location>
-		</taglib>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/sql-rt</taglib-uri>
-			<taglib-location>/WEB-INF/sql-rt.tld</taglib-location>
-		</taglib>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/x</taglib-uri>
-			<taglib-location>/WEB-INF/x.tld</taglib-location>
-		</taglib>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/x-rt</taglib-uri>
-			<taglib-location>/WEB-INF/x-rt.tld</taglib-location>
-		</taglib>
-	</jsp-config>
-	<servlet>
-		<display-name>UserServlet</display-name>
-		<servlet-name>UserServ</servlet-name>
-		<servlet-class>user.web.UserServ</servlet-class>
-	</servlet>
-	<servlet>
-		<display-name>SouvenirsServlet</display-name>
-		<servlet-name>SouvenirsServ</servlet-name>
-		<servlet-class>souvenirs.web.SouvenirsServ</servlet-class>
-	</servlet>
-	<servlet>
-		<display-name>ImageLoader</display-name>
-		<servlet-name>ImageLoader</servlet-name>
-		<servlet-class>tool.ImageLoader</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>ErrorHandler</servlet-name>
-		<servlet-class>tool.ErrorHandler</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>UploadServ</servlet-name>
-		<servlet-class>upload.web.UploadServ</servlet-class>
-	</servlet>
-
-	<!-- servlet mappings -->
-	<servlet-mapping>
-		<servlet-name>ErrorHandler</servlet-name>
-		<url-pattern>/ErrorHandler</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>UserServ</servlet-name>
-		<url-pattern>/register</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>UserServ</servlet-name>
-		<url-pattern>/login</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>SouvenirsServ</servlet-name>
-		<url-pattern>/homepage</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>UserServ</servlet-name>
-		<url-pattern>/logout</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>ImageLoader</servlet-name>
-		<url-pattern>/image</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>SouvenirsServ</servlet-name>
-		<url-pattern>/formPicture</url-pattern>
-	</servlet-mapping>	
-	<servlet-mapping>
-		<servlet-name>SouvenirsServ</servlet-name>
-		<url-pattern>/making</url-pattern>
-	</servlet-mapping>	
-	<servlet-mapping>
-		<servlet-name>SouvenirsServ</servlet-name>
-		<url-pattern>/AlbumAjax</url-pattern>
-	</servlet-mapping>	
-	<servlet-mapping>
-		<servlet-name>UploadServ</servlet-name>
-		<url-pattern>/upload</url-pattern>
-	</servlet-mapping>	
-	<servlet-mapping>
-		<servlet-name>SouvenirsServ</servlet-name>
-		<url-pattern>/checkMakingDone</url-pattern>
-	</servlet-mapping>	
-	<servlet-mapping>
-		<servlet-name>SouvenirsServ</servlet-name>
-		<url-pattern>/album</url-pattern>
-	</servlet-mapping>	
-					
-	<error-page>
-		<error-code>403</error-code>
-		<location>/ErrorHandler</location>
-	</error-page>
-	<error-page>
-		<error-code>404</error-code>
-		<location>/ErrorHandler</location>
-	</error-page>
-	<error-page>
-		<error-code>500</error-code>
-		<location>/ErrorHandler</location>
-	</error-page>
-	<error-page>
-		<exception-type>java.lang.Throwable</exception-type>
-		<location>/ErrorHandler</location>
-	</error-page>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-	<session-config>
-		<session-timeout>30</session-timeout>
-	</session-config>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <display-name>Souvenirs</display-name>
+  <jsp-config>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/fmt</taglib-uri>
+      <taglib-location>/WEB-INF/fmt.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/fmt-rt</taglib-uri>
+      <taglib-location>/WEB-INF/fmt-rt.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
+      <taglib-location>/WEB-INF/c.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/core-rt</taglib-uri>
+      <taglib-location>/WEB-INF/c-rt.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/sql</taglib-uri>
+      <taglib-location>/WEB-INF/sql.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/sql-rt</taglib-uri>
+      <taglib-location>/WEB-INF/sql-rt.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/x</taglib-uri>
+      <taglib-location>/WEB-INF/x.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/x-rt</taglib-uri>
+      <taglib-location>/WEB-INF/x-rt.tld</taglib-location>
+    </taglib>
+  </jsp-config>
+  <servlet>
+    <display-name>UserServlet</display-name>
+    <servlet-name>UserServ</servlet-name>
+    <servlet-class>user.web.UserServ</servlet-class>
+  </servlet>
+  <servlet>
+    <display-name>SouvenirsServlet</display-name>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <servlet-class>souvenirs.web.SouvenirsServ</servlet-class>
+  </servlet>
+  <servlet>
+    <display-name>ImageLoader</display-name>
+    <servlet-name>ImageLoader</servlet-name>
+    <servlet-class>tool.ImageLoader</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>ErrorHandler</servlet-name>
+    <servlet-class>tool.ErrorHandler</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UploadServ</servlet-name>
+    <servlet-class>upload.web.UploadServ</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ErrorHandler</servlet-name>
+    <url-pattern>/ErrorHandler</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UserServ</servlet-name>
+    <url-pattern>/register</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UserServ</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/homepage</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UserServ</servlet-name>
+    <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ImageLoader</servlet-name>
+    <url-pattern>/image</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/formPicture</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/making</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/AlbumAjax</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UploadServ</servlet-name>
+    <url-pattern>/upload</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/checkMakingDone</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/album</url-pattern>
+  </servlet-mapping>
+  <error-page>
+    <error-code>403</error-code>
+    <location>/ErrorHandler</location>
+  </error-page>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/ErrorHandler</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/ErrorHandler</location>
+  </error-page>
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/ErrorHandler</location>
+  </error-page>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
 </web-app>
