完成picture管理页面；优化布局：加宽中型屏幕的mainbody宽度；添加一个验证码；优化生成验证码的随机操作

--- a/conf/souvenirs.properties
+++ b/conf/souvenirs.properties
@@ -1,6 +1,7 @@
 #verify code properties
-verifycode_number = 1
+verifycode_number = 2
 verifycode1 = C1W2
+verifycode2 = BPCY
 #data_path indicates the folder storing data at server
 data_path1 = E:\\computer science\\Souvenirs\\db\\data
 data_path = D:\\project\\Souvenirs\\db\\data
