--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -103,9 +103,18 @@
     <url-pattern>/checkMakingDone</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>SouvenirsServ</servlet-name>
-    <url-pattern>/album</url-pattern>
+	<servlet-name>SouvenirsServ</servlet-name>
+	<url-pattern>/album</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+	<servlet-name>SouvenirsServ</servlet-name>
+	<url-pattern>/picture</url-pattern>
+  </servlet-mapping>
+  
+  <error-page>
+    <error-code>400</error-code>
+    <location>/ErrorHandler</location>
+  </error-page>  
   <error-page>
     <error-code>403</error-code>
     <location>/ErrorHandler</location>
