优化shared album显示界面；添加picture管理界面的查看大图功能；添加从共享相册中查看照片的页面；添加从相册中点击上传的页面

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -114,6 +114,10 @@
 	<servlet-name>SouvenirsServ</servlet-name>
 	<url-pattern>/sharedAlbum</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+	<servlet-name>SouvenirsServ</servlet-name>
+	<url-pattern>/showPicture</url-pattern>
+  </servlet-mapping>
   
   <error-page>
     <error-code>400</error-code>
