添加album页面的更改用户名功能、更改相册介绍功能、删除相册中的照片功能、更改相册封面功能；添加处理这些功能的ajax捕获界面；更改DB的execSqlUpdate()方法的返回值；添加重命名异常；使用bootstrap-growl js包来显示页面上的消息；修改upload页面在指定相册下无法将相册名作为参数传给后台的bug；抽象出文件操作工具类FileOper

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -58,6 +58,11 @@
     <servlet-name>UploadServ</servlet-name>
     <servlet-class>upload.web.UploadServ</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <servlet-class>souvenirs.web.SouvenirsAjaxServ</servlet-class>
+  </servlet>
+  
   <servlet-mapping>
     <servlet-name>ErrorHandler</servlet-name>
     <url-pattern>/errorHandler</url-pattern>
@@ -103,26 +108,51 @@
     <url-pattern>/checkMakingDone</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-	<servlet-name>SouvenirsServ</servlet-name>
-	<url-pattern>/album</url-pattern>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/album</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-	<servlet-name>SouvenirsServ</servlet-name>
-	<url-pattern>/picture</url-pattern>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/picture</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-	<servlet-name>SouvenirsServ</servlet-name>
-	<url-pattern>/sharedAlbum</url-pattern>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/sharedAlbum</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-	<servlet-name>SouvenirsServ</servlet-name>
-	<url-pattern>/showPicture</url-pattern>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/showPicture</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/updateAlbumName</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/updateDescription</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/deletePicture</url-pattern>
+  </servlet-mapping>  
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/sendComment</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/updateAlbumCover</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/queryAlbumCover</url-pattern>
   </servlet-mapping>
   
   <error-page>
     <error-code>400</error-code>
     <location>/ErrorHandler</location>
-  </error-page>  
+  </error-page>
   <error-page>
     <error-code>403</error-code>
     <location>/ErrorHandler</location>
