--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -96,10 +96,6 @@
     <url-pattern>/making</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>SouvenirsServ</servlet-name>
-    <url-pattern>/AlbumAjax</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
     <servlet-name>UploadServ</servlet-name>
     <url-pattern>/upload</url-pattern>
   </servlet-mapping>
@@ -122,6 +118,10 @@
   <servlet-mapping>
     <servlet-name>SouvenirsServ</servlet-name>
     <url-pattern>/showPicture</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/share</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
@@ -148,7 +148,11 @@
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/queryAlbumCover</url-pattern>
   </servlet-mapping>
-  
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/AlbumAjax</url-pattern>
+  </servlet-mapping>
+    
   <error-page>
     <error-code>400</error-code>
     <location>/ErrorHandler</location>
