完成share的页面设计；添加分享照片的后台处理代码；优化album界面的图片廊显示

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -152,7 +152,11 @@
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/AlbumAjax</url-pattern>
   </servlet-mapping>
-    
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/sharePictures</url-pattern>
+  </servlet-mapping>
+      
   <error-page>
     <error-code>400</error-code>
     <location>/ErrorHandler</location>
