更改comment类及对应的Store实现类；优化picture页面的comment部分显示；改进comment中被回复评论的寻址方法

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -160,26 +160,33 @@
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/sharePictures</url-pattern>
   </servlet-mapping>
-      
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/likePicture</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/dislikePicture</url-pattern>
+  </servlet-mapping>        
   <error-page>
     <error-code>400</error-code>
-    <location>/ErrorHandler</location>
+    <location>/errorHandler</location>
   </error-page>
   <error-page>
     <error-code>403</error-code>
-    <location>/ErrorHandler</location>
+    <location>/errorHandler</location>
   </error-page>
   <error-page>
     <error-code>404</error-code>
-    <location>/ErrorHandler</location>
+    <location>/errorHandler</location>
   </error-page>
   <error-page>
     <error-code>500</error-code>
-    <location>/ErrorHandler</location>
+    <location>/errorHandler</location>
   </error-page>
   <error-page>
     <exception-type>java.lang.Throwable</exception-type>
-    <location>/ErrorHandler</location>
+    <location>/errorHandler</location>
   </error-page>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
