完成picture页面的comment添加基础操作；仍存在的问题是中文乱码

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -167,7 +167,14 @@
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/dislikePicture</url-pattern>
-  </servlet-mapping>        
+  </servlet-mapping>       
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/addComment</url-pattern>
+  </servlet-mapping>    
+  
+  
+   
   <error-page>
     <error-code>400</error-code>
     <location>/errorHandler</location>
