完成report comment的后台操作；添加对comment report内容字数的检查；修改picture页面下载图片异常的bug；优化显示原图的位置

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -172,7 +172,10 @@
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/addComment</url-pattern>
   </servlet-mapping>    
-  
+  <servlet-mapping>
+    <servlet-name>SouvenirsAjax</servlet-name>
+    <url-pattern>/reportComment</url-pattern>
+  </servlet-mapping>   
   
    
   <error-page>
