修复comment非英文字符乱码的问题；重新设计homepage样式

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -75,10 +75,7 @@
     <servlet-name>UserServ</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>SouvenirsServ</servlet-name>
-    <url-pattern>/homepage</url-pattern>
-  </servlet-mapping>
+
   <servlet-mapping>
     <servlet-name>UserServ</servlet-name>
     <url-pattern>/logout</url-pattern>
@@ -87,6 +84,15 @@
     <servlet-name>ImageLoader</servlet-name>
     <url-pattern>/image</url-pattern>
   </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/homepage</url-pattern>
+  </servlet-mapping> 
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/homepagenew</url-pattern>
+  </servlet-mapping>   
   <servlet-mapping>
     <servlet-name>SouvenirsServ</servlet-name>
     <url-pattern>/formPicture</url-pattern>
