完成homepage的dashboard；完成homepage上的创建相册功能；修复ImageLoader生成的图片地址末尾含有空白符而无法被浏览器解析的bug；

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -133,7 +133,11 @@
     <servlet-name>SouvenirsServ</servlet-name>
     <url-pattern>/updatePictureInfo</url-pattern>
   </servlet-mapping>
-    
+  <servlet-mapping>
+    <servlet-name>SouvenirsServ</servlet-name>
+    <url-pattern>/createAlbum</url-pattern>
+  </servlet-mapping>
+      
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/updateAlbumName</url-pattern>
