--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -62,6 +62,17 @@
     <servlet-name>SouvenirsAjax</servlet-name>
     <servlet-class>souvenirs.web.SouvenirsAjaxServ</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>GroupServ</servlet-name>
+    <servlet-class>group.web.GroupServ</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>GroupAjaxServ</servlet-name>
+    <servlet-class>group.web.GroupAjaxServ</servlet-class>
+  </servlet> 
+  
+  
+  
   
   <servlet-mapping>
     <servlet-name>ErrorHandler</servlet-name>
@@ -75,7 +86,6 @@
     <servlet-name>UserServ</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
-
   <servlet-mapping>
     <servlet-name>UserServ</servlet-name>
     <url-pattern>/logout</url-pattern>
@@ -84,15 +94,14 @@
     <servlet-name>ImageLoader</servlet-name>
     <url-pattern>/image</url-pattern>
   </servlet-mapping>
-
   <servlet-mapping>
     <servlet-name>SouvenirsServ</servlet-name>
     <url-pattern>/homepage</url-pattern>
-  </servlet-mapping> 
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>SouvenirsServ</servlet-name>
     <url-pattern>/homepagenew</url-pattern>
-  </servlet-mapping>   
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>SouvenirsServ</servlet-name>
     <url-pattern>/formPicture</url-pattern>
@@ -137,7 +146,6 @@
     <servlet-name>SouvenirsServ</servlet-name>
     <url-pattern>/createAlbum</url-pattern>
   </servlet-mapping>
-      
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/updateAlbumName</url-pattern>
@@ -149,7 +157,7 @@
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/deletePicture</url-pattern>
-  </servlet-mapping>  
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/sendComment</url-pattern>
@@ -177,20 +185,30 @@
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/dislikePicture</url-pattern>
-  </servlet-mapping>       
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/addComment</url-pattern>
-  </servlet-mapping>    
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/reportComment</url-pattern>
-  </servlet-mapping>   
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>SouvenirsAjax</servlet-name>
     <url-pattern>/deletePAlbum</url-pattern>
-  </servlet-mapping>     
-   
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GroupServ</servlet-name>
+    <url-pattern>/group</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GroupAjaxServ</servlet-name>
+    <url-pattern>/showMyGroup</url-pattern>
+  </servlet-mapping>  
+  
+  
+  
   <error-page>
     <error-code>400</error-code>
     <location>/errorHandler</location>
@@ -220,6 +238,6 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <session-config>
-    <session-timeout>30</session-timeout>
+    <session-timeout>300</session-timeout>
   </session-config>
 </web-app>
