添加新的模板；完成搜索、加入小组功能

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -214,6 +214,14 @@
     <servlet-name>GroupAjaxServ</servlet-name>
     <url-pattern>/leaveGroup</url-pattern>
   </servlet-mapping>   
+  <servlet-mapping>
+    <servlet-name>GroupAjaxServ</servlet-name>
+    <url-pattern>/searchGroup</url-pattern>
+  </servlet-mapping>   
+ <servlet-mapping>
+    <servlet-name>GroupAjaxServ</servlet-name>
+    <url-pattern>/joininGroup</url-pattern>
+  </servlet-mapping>   
   
   <error-page>
     <error-code>400</error-code>
