--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -222,7 +222,12 @@
     <servlet-name>GroupAjaxServ</servlet-name>
     <url-pattern>/joininGroup</url-pattern>
   </servlet-mapping>   
+  <servlet-mapping>
+    <servlet-name>GroupServ</servlet-name>
+    <url-pattern>/createGroup</url-pattern>
+  </servlet-mapping>
   
+    
   <error-page>
     <error-code>400</error-code>
     <location>/errorHandler</location>
